# tap-mailgun

./: .gitignore  README.md  meltano.yml  pyproject.toml
.github/workflows/: github_actions_validator.yml
tap_mailgun/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_mailgun/schemas/: analytics_metrics.json  analytics_usage_metrics.json
tests/: test_streams.py
