[project]
name = "tap-mailgun"
version = "0.1.0"
description = "Singer tap for extracting data from Mailgun API"
authors = [{ name = "Jonathan Perron", email = "jonathan.perron@lumapps.com" }]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
dependencies = [
    "singer-sdk~=0.46.4",
    "requests~=2.32.3",
]

[project.urls]
Homepage = "https://github.com/lumapps/tap-mailgun"
Repository = "https://github.com/lumapps/tap-mailgun"

[project.scripts]
tap-mailgun = "tap_mailgun:TapMailgun.cli"

[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"
